# event_handler

./: .dockerignore  .env.example  .gitignore  README.md  docker_app.compose.yml  docker_apps.compose.yml  docker_infra_compose.yml  locust_test.py  pyproject.toml  redis.conf.example  users.acl.example
alembic/: env.py
alembic/versions/: 1_init.py  2_add_errors_payload.py  3_add_analyze_fields.py  4_upgrade_model_for_using.py
app_api/: __main__.py  config.py  di.py  models.py  routes.py  schemas.py  services.py
consumer/: __main__.py  config.py  di.py  models.py  schemas.py  services.py  worker.py
docker/api/: Dockerfile  entrypoint.sh  start.sh
docker/consumer/: Dockerfile  entrypoint.sh  start.sh
docker/notification_provider/: Dockerfile  entrypoint.sh  start.sh
notification_provider/: __main__.py  config.py  di.py  helpers.py  models.py  routes.py  schemas.py  services.py
